Fixed wow animation flicker

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body,
 html,
 {
-    background: #fff
+    background: black;
 }
 
 body,
@@ -43,6 +43,10 @@ h2 {
 
 p {
     font-family: "Karla", sans-serif;
+}
+
+.wow {
+    visibility: hidden;
 }
 
 #main_logo {
@@ -119,7 +123,7 @@ a:hover {
 
 .section {
     /* fallback for older browsers */
-    background: url(../img/chessboard.jpg) no-repeat center center;
+    background: black;
     /* newer browsers: color gradient with image */
     background: linear-gradient(to bottom, hsla(23, 30%, 0%, 0.50), hsl(0, 90%, 4%)), url(../img/chessboard.jpg) no-repeat center center;
     -webkit-background-size: cover;
